# Mediation_Tool_SCS

./: .env.example  .gitignore  AI_GUIDE_IMPLEMENTATION.md  CHAT_PERSISTENCE_FEATURE.md  DEPLOYMENT_GUIDE.md  DETAILED_INSTRUCTOR_MANUAL.md  DETAILED_PARTICIPANT_MANUAL.md  DOCUMENTATION_INDEX.md  Dockerfile  ENGINEERING_DOCUMENTATION.md  ENHANCEMENTS_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTOR_GUIDE.md  INTEGRATION_STATUS.md  LLM_ESCALATION_ENHANCEMENT.md  MEDIATOR_SYSTEM_GUIDE.md  MULTIPLAYER_FEATURE_IMPLEMENTATION_PLAN.md  MULTIPLAYER_QUICK_START.md  MULTIPLAYER_TESTING_GUIDE.md  MULTIPLAYER_USER_GUIDE.md  MULTI_VIEW_GUIDE.md  Makefile  PARTICIPANT_GUIDE.md  PEACE_MEDIATION_ENHANCEMENTS (2).md  PEACE_MEDIATION_PACKAGE_SUMMARY.md  PEACE_MEDIATION_UI_GUIDE.md  PEACE_MEDIATION_UI_REPORT.md  QUICK_START_CARD.md  README.md  README_V2.md  RUNNING_V2.md  SCENARIO_AWARE_QUICK_GUIDE.md  SCENARIO_AWARE_UI_REPORT.md  SCENARIO_EXAMPLES.md  SCS_SCENARIOS_GUIDE.md  SESSION_SUMMARY.md  STRATEGIC_LEVERS_INTEGRATION.md  STRATEGIC_LEVERS_USER_GUIDE.md  STREAMLIT_DEPLOYMENT_GUIDE.md  (+11 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.template
assets/geo/: sample_scs.geojson
cases/scs/: scenario_A_second_thomas.json  scenario_B_scarborough.json  scenario_C_kasawari.json  scenario_D_natuna.json
cases/scs_enhanced/: scenario_A_enhanced.json  scenario_B_enhanced.json  scenario_C_enhanced.json  scenario_D_enhanced.json
data/: historical_scs_incidents.json
docs/: MODEL_ASSUMPTIONS_AND_VALIDATION.md  MULTIPLAYER_QUICKSTART.md  MULTIPLAYER_VERSION_PLAN.md  SIMULATION_WORKFLOW_GUIDE.md
src/scs_mediator_sdk/ai_guide/: __init__.py  chatbot.py  knowledge_base.py  persistence.py
src/scs_mediator_sdk/analytics/: __init__.py  learning_tracker.py  outcome_quality.py  process_quality.py
src/scs_mediator_sdk/api/: server.py
src/scs_mediator_sdk/diplomacy/: __init__.py  multi_track.py
src/scs_mediator_sdk/dynamics/: __init__.py  escalation_ladder.py  strategic_context.py
src/scs_mediator_sdk/engines/: bargaining_engine.py  enhanced_bargaining.py
src/scs_mediator_sdk/guides/: __init__.py  negotiation_guides.py
src/scs_mediator_sdk/mediation/: __init__.py
src/scs_mediator_sdk/multiplayer/: __init__.py  session_manager.py
src/scs_mediator_sdk/peacebuilding/: __init__.py  cbm_library.py  spoiler_management.py
(+22 files in other folders)
