[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scs-mediator-sdk"
version = "9.0.0"
description = "Advanced Mediation Simulation Tool - Game theory, ABM, and mediation process framework for conflict resolution training"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="SCS Mediation Training Kit"}]
license = {text = "MIT"}
keywords = ["mediation", "conflict resolution", "negotiation", "game theory", "agent-based modeling", "simulation"]

dependencies = [
  # Core framework
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.3.0",

  # Simulation and modeling
  "mesa>=2.2.0,<3.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "networkx>=3.2.0",

  # UI and visualization
  "streamlit>=1.36.0",
  "plotly>=5.18.0",
  "matplotlib>=3.8.0",

  # Data handling
  "orjson>=3.10.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "python-dotenv>=1.0.0",

  # AI/LLM support
  "anthropic>=0.18.0",

  # Scientific computing
  "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "types-PyYAML>=6.0.0",
  "black>=23.0.0",
]

docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.4.0",
  "mkdocstrings[python]>=0.24.0",
]

viz = [
  "seaborn>=0.13.0",
  "graphviz>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/your-org/scs_mediator_sdk"
Documentation = "https://github.com/your-org/scs_mediator_sdk/blob/main/docs/USER_GUIDE.md"
Repository = "https://github.com/your-org/scs_mediator_sdk"
Issues = "https://github.com/your-org/scs_mediator_sdk/issues"

[tool.setuptools]
packages = ["scs_mediator_sdk"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/scs_mediator_sdk --cov-report=html --cov-report=term"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 120
target-version = ["py311"]
